[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/ui/uipack-rpg/PNG/panel_beigeLight.png" type="Texture" id=1]
[ext_resource path="res://presets/theme/main_theme.tres" type="Theme" id=2]
[ext_resource path="res://screen/SettingScreen.gd" type="Script" id=4]

[node name="Setting" type="CanvasLayer"]
layer = 10
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.266667, 0.266667, 0.266667, 0.635294 )

[node name="Panel" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 155.0
margin_top = 98.0
margin_right = -145.0
margin_bottom = -112.0
theme = ExtResource( 2 )
texture = ExtResource( 1 )
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 10
axis_stretch_horizontal = 1
axis_stretch_vertical = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -121.0
margin_top = 56.0
margin_right = 148.0
margin_bottom = -64.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 269.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0.0313726, 0.101961, 0, 1 )
text = "SETTING"
align = 1
valign = 1
uppercase = true

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer"]
margin_top = 28.0
margin_right = 269.0
margin_bottom = 72.0

[node name="Label" type="Label" parent="Panel/VBoxContainer/VBoxContainer"]
margin_right = 269.0
margin_bottom = 24.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Main Volume"
align = 1

[node name="HSlider" type="HSlider" parent="Panel/VBoxContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 269.0
margin_bottom = 44.0
value = 90.0

[node name="BackButton" type="Button" parent="Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -158.0
margin_top = 20.0
margin_right = -23.0
margin_bottom = 66.0
text = "Back"

[connection signal="visibility_changed" from="." to="." method="_on_Setting_visibility_changed"]
[connection signal="pressed" from="Panel/BackButton" to="." method="_on_BackButton_pressed"]
